[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["stepan <stepa.korobov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.13"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-debug-toolbar = "4.0.0"
pillow = "^10.4.0"
gunicorn = "^22.0.0"
pytz = "^2024.1"
asgiref = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
